--- a/frontend/.env-example
+++ b/frontend/.env-example
@@ -3,18 +3,18 @@ APP_ENV=local
 
 API_URL=http://localhost:8000/api
 
-GITHUB_CLIENT_ID=43f385d15efa5d84bc88
-GITHUB_CLIENT_SECRET=e933092a725ff8d2e208f1dea14659d7e1f15179
+GITHUB_CLIENT_ID=
+GITHUB_CLIENT_SECRET=
 
-GOOGLE_CLIENT_ID=735705928197-8se90j51bqtf27d3o0mhropl46p9qtti.apps.googleusercontent.com
-GOOGLE_CLIENT_SECRET=z-YFdBVAeHKPjWx3rcE6fq5B
-GOOGLE_REDIRECT_CALLBACK=http://localhost:8000/api/oauth/google/callback
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
+GOOGLE_REDIRECT_CALLBACK=
 
-KEYCLOAK_AUTHSERVERURL=http://keycloak.digitalservice.id
-KEYCLOAK_REALM=43f385d15efa5d84bc88
-KEYCLOAK_CLIENTID=43f385d15efa5d84bc88
-KEYCLOAK_CLIENTSECRET=e933092a725ff8d2e208f1dea14659d7e1f15179
-KEYCLOAK_REDIRECTURI=http://localhost:8000/api/oauth/keycloak/callback
+KEYCLOAK_AUTHSERVERURL=
+KEYCLOAK_REALM=
+KEYCLOAK_CLIENTID=
+KEYCLOAK_CLIENTSECRET=
+KEYCLOAK_REDIRECTURI=
 KEYCLOAK_ENCRYPTIONALGORITHM=
 KEYCLOAK_ENCRYPTIONKEYPATH=
 KEYCLOAK_ENCRYPTIONKEY=
