--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,7 +25,8 @@
     "popper.js": "^1.16.1",
     "sweetalert2": "^8.19.0",
     "vform": "^1.0.1",
-    "vue-i18n": "^8.15.3"
+    "vue-i18n": "^8.15.3",
+    "vue-sidebar-menu": "^4.5.3"
   },
   "devDependencies": {
     "@nuxtjs/eslint-config": "^1.1.2",
