--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
     "nuxt": "^2.11.0",
     "nuxt-sweetalert2": "^1.0.0",
     "popper.js": "^1.16.1",
+    "portal-vue": "^2.1.7",
     "sweetalert2": "^8.19.0",
     "vform": "^1.0.1",
     "vue-i18n": "^8.15.3",
