--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,9 +26,11 @@
     "popper.js": "^1.16.1",
     "portal-vue": "^2.1.7",
     "sweetalert2": "^8.19.0",
+    "v-mask": "^2.1.0",
     "vform": "^1.0.1",
     "vue-i18n": "^8.15.3",
-    "vue-sidebar-menu": "^4.5.3"
+    "vue-sidebar-menu": "^4.5.3",
+    "vuejs-datepicker": "^1.6.2"
   },
   "devDependencies": {
     "@nuxtjs/eslint-config": "^1.1.2",
