--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -52,7 +52,7 @@ http {
 		listen 80;
 		listen [::]:80;
 		server_name _;
-		index index.php index.html;
+		index index.html index.php;
 		error_log  /var/log/nginx/error.log;
 		access_log /var/log/nginx/access.log;
 		root /var/www/frontend;
@@ -71,7 +71,7 @@ http {
 			try_files $uri $uri/ /api/index.php?$query_string;
 		}
 		location / {
-			try_files $uri $uri/;
+			try_files $uri $uri/ =404;
 			gzip_static on;
 			# static nuxt
 location ~* \.(?:manifest|appcache|html?|xml|json)$ {
