--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -20,6 +20,9 @@ http {
 	fastcgi_buffers 8 128k;
 	fastcgi_buffer_size 256k;
 
+	include /etc/nginx/mime.types;
+	default_type application/octet-stream;
+	
 	gzip on;
 	gzip_disable "msie6";
 
@@ -30,9 +33,6 @@ http {
 	gzip_http_version 1.1;
 	gzip_types text/plain text/css application/json application/x-javascript text/xml application/xml application/xml+rss text/javascript application/javascript;
 
-	include /etc/nginx/mime.types;
-	default_type application/octet-stream;
-	
 	# Redirector for http request
 	#server {
 	#	listen 80;
@@ -47,15 +47,13 @@ http {
 	#}
 	
 	server {
-		ssl_certificate /etc/letsencrypt/live/forum.sapawarga.jabarprov.go.id/fullchain.pem;
-		ssl_certificate_key /etc/letsencrypt/live/forum.sapawarga.jabarprov.go.id/privkey.pem;
 		listen 80;
 		listen [::]:80;
 		server_name _;
 		index index.html index.php;
 		error_log  /var/log/nginx/error.log;
 		access_log /var/log/nginx/access.log;
-		root /var/www/frontend;
+		root /var/www/frontend/dist;
 		# PHP script Handler
 		location ~ \.php$ {
 			try_files $uri =404;
@@ -65,13 +63,14 @@ http {
 			include fastcgi_params;
 			fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
 			fastcgi_param PATH_INFO $fastcgi_path_info;
+			fastcgi_read_timeout 480;
 		}
-		location /api/ {
+		location /backend/ {
 			index index.php;
-			try_files $uri $uri/ /api/index.php?$query_string;
+			try_files $uri $uri/ /backend/index.php?$query_string;
 		}
 		location / {
-			try_files $uri $uri/ =404;
+			try_files $uri $uri/ /index.html;
 			gzip_static on;
 			# static nuxt
 location ~* \.(?:manifest|appcache|html?|xml|json)$ {
@@ -97,37 +96,6 @@ location ~* \.(?:ttf|ttc|otf|eot|woff|woff2)$ {
   access_log off;
 }
 
-# Gzip compression
-gzip on;
-gzip_comp_level 5;
-gzip_min_length 256;
-gzip_proxied any;
-gzip_vary on;
-gzip_types
-    application/atom+xml
-    application/javascript
-    application/json
-    application/ld+json
-    application/manifest+json
-    application/rss+xml
-    application/vnd.geo+json
-    application/vnd.ms-fontobject
-    application/x-font-ttf
-    application/x-web-app-manifest+json
-    application/xhtml+xml
-    application/xml
-    font/opentype
-    image/bmp
-    image/svg+xml
-    image/x-icon
-    text/cache-manifest
-    text/css
-    text/plain
-    text/vcard
-    text/vnd.rim.location.xloc
-    text/vtt
-    text/x-component
-    text/x-cross-domain-policy;
 		}
 		location /.well-known/acme-challenge/ {
 			root /var/www/certbot;
