--- a/backend/composer.json
+++ b/backend/composer.json
@@ -42,6 +42,10 @@
         "classmap": [
             "database/seeds",
             "database/factories"
+        ],
+        "files": [
+            "app/const.php",
+            "app/global_functions.php"
         ]
     },
     "autoload-dev": {
