--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "metismenu": "^3.0.6",
     "metismenujs": "^1.1.0",
     "nuxt": "^2.11.0",
+    "nuxt-dropzone": "^1.0.4",
     "nuxt-sweetalert2": "^1.0.0",
     "popper.js": "^1.16.1",
     "portal-vue": "^2.1.7",
