--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -24,14 +24,11 @@ http {
 	default_type application/octet-stream;
 	
 	gzip on;
-	gzip_disable "msie6";
-
+	gzip_disable "MSIE [1-6]\.(?!.*SV1)";
+	gzip_min_length  500;
+	gzip_buffers  4 32k;
+	gzip_types    text/plain text/css application/javascript application/json application/x-javascript text/xml application/xml application/xml+rss text/javascript image/svg+xml image/svg;
 	gzip_vary on;
-	gzip_proxied any;
-	gzip_comp_level 6;
-	gzip_buffers 16 8k;
-	gzip_http_version 1.1;
-	gzip_types text/plain text/css application/json application/x-javascript text/xml application/xml application/xml+rss text/javascript application/javascript;
 
 	# Redirector for http request
 	#server {
@@ -71,7 +68,6 @@ http {
 		}
 		location / {
 			try_files $uri $uri/ /index.html;
-			gzip_static on;
 			# static nuxt
 location ~* \.(?:manifest|appcache|html?|xml|json)$ {
   add_header Cache-Control "max-age=0";
