--- a/backend/composer.json
+++ b/backend/composer.json
@@ -14,6 +14,7 @@
         "laravel/socialite": "^4.0",
         "laravel/tinker": "^2.0",
         "laravel/ui": "^2.0",
+        "maatwebsite/excel": "^3.1",
         "tymon/jwt-auth": "^1.0.0-rc.5"
     },
     "require-dev": {
