--- a/backend/composer.json
+++ b/backend/composer.json
@@ -7,6 +7,7 @@
     "require": {
         "php": "^7.2.5",
         "avdevs/keycloak": "^1.0@dev",
+        "barryvdh/laravel-dompdf": "^0.8.5",
         "fideloper/proxy": "^4.0",
         "fruitcake/laravel-cors": "^1.0",
         "guzzlehttp/guzzle": "^6.3",
@@ -15,6 +16,8 @@
         "laravel/tinker": "^2.0",
         "laravel/ui": "^2.0",
         "maatwebsite/excel": "^3.1",
+        "setasign/fpdf": "^1.8",
+        "setasign/fpdi": "^2.3",
         "tymon/jwt-auth": "^1.0.0-rc.5"
     },
     "require-dev": {
