--- a/backend/composer.json
+++ b/backend/composer.json
@@ -15,6 +15,7 @@
         "laravel/socialite": "^4.0",
         "laravel/tinker": "^2.0",
         "laravel/ui": "^2.0",
+        "league/flysystem-aws-s3-v3": "^1.0",
         "maatwebsite/excel": "^3.1",
         "setasign/fpdf": "^1.8",
         "setasign/fpdi": "^2.3",
