--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.12.0",
     "@fortawesome/vue-fontawesome": "^0.1.9",
     "@nuxtjs/router": "^1.5.0",
+    "@nuxtjs/sentry": "^4.0.2",
     "@nuxtjs/toast": "^3.3.0",
     "axios": "^0.19.1",
     "bootstrap": "^4.4.1",
@@ -23,6 +24,7 @@
     "metismenujs": "^1.1.0",
     "nuxt": "^2.11.0",
     "nuxt-dropzone": "^1.0.4",
+    "nuxt-matomo": "^1.2.3",
     "nuxt-sweetalert2": "^1.0.0",
     "popper.js": "^1.16.1",
     "portal-vue": "^2.1.7",
