Update export list verifikasi

--- a/backend/.env-example
+++ b/backend/.env-example
@@ -61,3 +61,5 @@ KEYCLOAK_REDIRECTURI=
 KEYCLOAK_ENCRYPTIONALGORITHM=
 KEYCLOAK_ENCRYPTIONKEYPATH=
 KEYCLOAK_ENCRYPTIONKEY=
+
+SENTRY_LARAVEL_DSN=http://ef3b82de72e943d78d227a63f7b07b2c:d6ce0926f38e4d68ae79d78d81b75845@sentry.velotek.co.id/27
