--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,6 +31,7 @@
     "sweetalert2": "^8.19.0",
     "v-mask": "^2.1.0",
     "vform": "^1.0.1",
+    "vue-dropdown-datepicker": "^1.3.1",
     "vue-i18n": "^8.15.3",
     "vue-sidebar-menu": "^4.5.3",
     "vuejs-datepicker": "^1.6.2"
