--- a/backend/composer.json
+++ b/backend/composer.json
@@ -8,6 +8,7 @@
         "php": "^7.2.5",
         "avdevs/keycloak": "^1.0@dev",
         "barryvdh/laravel-dompdf": "^0.8.5",
+        "doctrine/dbal": "^2.10",
         "fideloper/proxy": "^4.0",
         "fruitcake/laravel-cors": "^1.0",
         "guzzlehttp/guzzle": "^6.3",
