--- a/frontend/package.json
+++ b/frontend/package.json
@@ -33,6 +33,7 @@
     "vform": "^1.0.1",
     "vue-dropdown-datepicker": "^1.3.1",
     "vue-i18n": "^8.15.3",
+    "vue-select": "^3.10.3",
     "vue-sidebar-menu": "^4.5.3",
     "vuejs-datepicker": "^1.6.2"
   },
