--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,7 +17,9 @@
     "@nuxtjs/toast": "^3.3.0",
     "axios": "^0.19.1",
     "bootstrap": "^4.4.1",
+    "chart.js": "^2.9.3",
     "dotenv": "^8.2.0",
+    "hchs-vue-charts": "^1.2.8",
     "jquery": "^3.5.0",
     "js-cookie": "^2.2.1",
     "metismenu": "^3.0.6",
