--- a/backend/.env-example
+++ b/backend/.env-example
@@ -1,4 +1,4 @@
-APP_NAME="Laravel Nuxt"
+APP_NAME="Web Satelit"
 APP_ENV=local
 APP_KEY=base64:MFrgX1lwszV93PMF2abob+1bkWGfS2W1mm9av+FgnD8=
 APP_DEBUG=true
@@ -11,7 +11,7 @@ LOG_CHANNEL=stack
 DB_CONNECTION=pgsql
 DB_HOST=127.0.0.1
 DB_PORT=5432
-DB_DATABASE=pikobar_lab
+DB_DATABASE=pikobar_lab_web_satelit
 DB_USERNAME=postgres
 DB_PASSWORD=postgres
 
