--- a/docker-compose-development.yml
+++ b/docker-compose-development.yml
@@ -15,11 +15,17 @@ services:
       - "80:80"
       - "443:443"
     command: "/bin/sh -c 'while :; do sleep 6h & wait $${!}; nginx -s reload; done & nginx -g \"daemon off;\"'"
+    networks: 
+      - gateway
+
   # Redis session and queue management
   redis:
     container_name: redis
     restart: always
     image: redis:3.2-alpine
+    networks: 
+      - gateway
+
   certbot:
     container_name: certbot
     image: certbot/certbot
@@ -27,6 +33,8 @@ services:
       - ./certbot:/var/www/certbot
       - ./data/certbot/conf:/etc/letsencrypt
     entrypoint: "/bin/sh -c 'trap exit TERM; while :; do certbot renew --webroot-path /var/www/certbot; sleep 12h & wait $${!}; done;'"
+    networks: 
+      - gateway
 
     
   #PHP Service
@@ -47,3 +55,5 @@ services:
       - ./backend:/var/www/backend
       - ./frontend:/var/www/frontend
       - ./php/local.ini:/usr/local/etc/php/conf.d/local.ini
+    networks: 
+      - gateway
