--- a/docker-compose-development.yml
+++ b/docker-compose-development.yml
@@ -57,3 +57,7 @@ services:
       - ./php/local.ini:/usr/local/etc/php/conf.d/local.ini
     networks: 
       - gateway
+
+networks: 
+  gateway:
+    external: true
