--- a/docker-compose-development.yml
+++ b/docker-compose-development.yml
@@ -17,6 +17,12 @@ services:
     command: "/bin/sh -c 'while :; do sleep 6h & wait $${!}; nginx -s reload; done & nginx -g \"daemon off;\"'"
     networks: 
       - gateway
+    logging:
+        driver: "awslogs"
+        options:
+           awslogs-region: "ap-southeast-1"
+           awslogs-group: "pikobar-labkes-satelite"
+           awslogs-stream: "staging-nginx"
 
   # Redis session and queue management
   redis:
@@ -25,6 +31,12 @@ services:
     image: redis:3.2-alpine
     networks: 
       - gateway
+    logging:
+        driver: "awslogs"
+        options:
+           awslogs-region: "ap-southeast-1"
+           awslogs-group: "pikobar-labkes-satelite"
+           awslogs-stream: "staging-redis"
 
   certbot:
     container_name: certbot
@@ -35,6 +47,12 @@ services:
     entrypoint: "/bin/sh -c 'trap exit TERM; while :; do certbot renew --webroot-path /var/www/certbot; sleep 12h & wait $${!}; done;'"
     networks: 
       - gateway
+    logging:
+        driver: "awslogs"
+        options:
+           awslogs-region: "ap-southeast-1"
+           awslogs-group: "pikobar-labkes-satelite"
+           awslogs-stream: "staging-certbot"
 
     
   #PHP Service
@@ -57,6 +75,12 @@ services:
       - ./php/local.ini:/usr/local/etc/php/conf.d/local.ini
     networks: 
       - gateway
+    logging:
+        driver: "awslogs"
+        options:
+           awslogs-region: "ap-southeast-1"
+           awslogs-group: "pikobar-labkes-satelite"
+           awslogs-stream: "staging-app"
 
 networks: 
   gateway:
