--- a/frontend/package.json
+++ b/frontend/package.json
@@ -35,6 +35,7 @@
     "vform": "^1.0.1",
     "vue-dropdown-datepicker": "^1.3.1",
     "vue-i18n": "^8.15.3",
+    "vue-multiselect": "^2.1.6",
     "vue-select": "^3.10.3",
     "vue-sidebar-menu": "^4.5.3",
     "vuejs-datepicker": "^1.6.2"
