add network gateway for traefik

--- a/docker-compose-production.yml
+++ b/docker-compose-production.yml
@@ -11,10 +11,12 @@ services:
       - ./frontend:/var/www/frontend
       - ./certbot:/var/www/certbot
       - ./data/certbot/conf:/etc/letsencrypt
-    ports:
-      - "80:80"
-      - "443:443"
+    #ports:
+    #  - "80:80"
+    #  - "443:443"
     command: "/bin/sh -c 'while :; do sleep 6h & wait $${!}; nginx -s reload; done & nginx -g \"daemon off;\"'"
+    networks: 
+      - gateway
     logging:
       driver: "awslogs"
       options:
@@ -27,6 +29,8 @@ services:
     container_name: redis
     restart: always
     image: redis:3.2-alpine
+    networks: 
+      - gateway
     logging:
       driver: "awslogs"
       options:
@@ -41,6 +45,8 @@ services:
       - ./certbot:/var/www/certbot
       - ./data/certbot/conf:/etc/letsencrypt
     entrypoint: "/bin/sh -c 'trap exit TERM; while :; do certbot renew --webroot-path /var/www/certbot; sleep 12h & wait $${!}; done;'"
+    networks: 
+      - gateway
     logging:
       driver: "awslogs"
       options:
@@ -67,9 +73,14 @@ services:
       - ./backend:/var/www/backend
       - ./frontend:/var/www/frontend
       - ./php/local.ini:/usr/local/etc/php/conf.d/local.ini
+    networks: 
+      - gateway
     logging:
       driver: "awslogs"
       options:
           awslogs-region: "ap-southeast-1"
           awslogs-group: "pikobar-labkes-satelite"
           awslogs-stream: "prod-app"
+networks: 
+  gateway:
+    external: true
