--- a/backend/.env-example
+++ b/backend/.env-example
@@ -15,6 +15,13 @@ DB_DATABASE=homestead
 DB_USERNAME=homestead
 DB_PASSWORD=secret
 
+DB_CONNECTION_LABKES=pgsql
+DB_HOST_LABKES=127.0.0.1
+DB_PORT_LABKES=5432
+DB_DATABASE_LABKES=homestead
+DB_USERNAME_LABKES=homestead
+DB_PASSWORD_LABKES=secret
+
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 QUEUE_CONNECTION=sync
