--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -7,6 +7,7 @@ COPY . .
 ARG API_URL
 ARG APP_URL
 ARG APP_NAME
+ARG APP_LOCALE
 
 ENV HOST 0.0.0.0
 ENV PORT 3000
@@ -16,6 +17,7 @@ ENV NUXT_ENV_VERSION $NUXT_ENV_VERSION
 ENV API_URL $API_URL
 ENV APP_URL $APP_URL
 ENV APP_NAME $APP_NAME
+ENV APP_LOCALE $APP_LOCALE
 
 #Test variable terpanggil
 RUN echo ${API_URL}
