--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -18,6 +18,7 @@ ENV NUXT_ENV_VERSION $NUXT_ENV_VERSION
 ENV API_URL $API_URL
 ENV APP_URL $APP_URL
 ENV APP_NAME $APP_NAME
+ENV APP_LOCALE $APP_LOCALE
 ENV SENTRY_LARAVEL_DSN $SENTRY_LARAVEL_DSN
 
 #Test variable terpanggil
