--- a/backend/docker-compose-dev.yml
+++ b/backend/docker-compose-dev.yml
@@ -7,8 +7,7 @@ services:
     #volumes:
     #  - staging-volume:/var/www/html/storage/
     env_file:
-      - .env-local
-
+      - .env
     ports:
       - "80:8080"
 volumes:
