--- a/backend/composer.json
+++ b/backend/composer.json
@@ -23,6 +23,7 @@
         "setasign/fpdf": "^1.8",
         "setasign/fpdi": "^2.3",
         "spatie/laravel-enum": "^1.6",
+        "squizlabs/php_codesniffer": "^3.5",
         "tymon/jwt-auth": "^1.0.0-rc.5"
     },
     "require-dev": {
