--- a/backend/composer.json
+++ b/backend/composer.json
@@ -76,6 +76,12 @@
         "post-create-project-cmd": [
             "@php artisan key:generate --ansi",
             "@php artisan jwt:secret --force"
+        ],
+        "phpcs": [
+          "vendor/bin/phpcs"
+        ],
+        "phpcbf": [
+          "vendor/bin/phpcbf"
         ]
     }
 }
