--- a/frontend/Dockerfile.caprover
+++ b/frontend/Dockerfile.caprover
@@ -1,7 +1,7 @@
-FROM node:10-alpine
+FROM node:14.15.4-slim
 
 WORKDIR /app
-RUN npm install
+COPY . .
 
 ARG API_URL
 ARG APP_URL
@@ -20,7 +20,7 @@ ENV APP_NAME $APP_NAME
 ENV APP_LOCALE $APP_LOCALE
 ENV SENTRY_LARAVEL_DSN $SENTRY_LARAVEL_DSN
 
-COPY . /app/
+RUN npm install
 RUN npm run build
 
 EXPOSE 3000
